--- a/frontend/src/app/components/product-item/product-item.component.html
+++ b/frontend/src/app/components/product-item/product-item.component.html
@@ -1,12 +1,12 @@
-<div class="shaded">
-  <!-- Input field with item name -->
+<!--<div class="shaded">
+  <!-- Input field with item name
   <mat-form-field>
     <input matInput placeholder="Item Name" [(ngModel)]="productItem.productName" (ngModelChange)="onItemUpdate()" productName="productName">
   </mat-form-field>
 
-  <!-- Checkbox for item status -->
+  <!-- Checkbox for item status
   <mat-checkbox [(ngModel)]="productItem.isApproved" (ngModelChange)="onItemUpdate()">Done</mat-checkbox>
 
-  <!-- Button to delete item -->
+  <!-- Button to delete item
   <button mat-flat-button color="warn"  (click)="onItemDelete()">Delete Item</button>
-</div>
+</div>-->
