--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,11 @@
 
       <mat-card-header>
         <!--<img mat-card-avatar src="" alt="Profile Picture">-->
-        <mat-card-title>{{productItem.productName}}</mat-card-title>
+        <mat-card-title>
+          <button mat-button class="button_fill" [routerLink]="['/productDetail', productItem.productId]" routerLinkActive="active" ><b>{{productItem.productName}}</b>
+          </button>
+        </mat-card-title>
+
         <mat-card-subtitle>{{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}} Uhr</mat-card-subtitle>
       </mat-card-header>
 
