small layout change

--- a/frontend/src/app/components/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/product-detail/product-detail.component.html
@@ -46,7 +46,7 @@
       Delivery is possible
     </p>
   </mat-card-content>
-  <mat-card-content *ngIf="!productDelivery">
+  <mat-card-content *ngIf="!productDelivery && !isService">
     <p>
       Product has to be picked up at {{productLocation}}
     </p>
