added seller info display

--- a/frontend/src/app/components/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/product-detail/product-detail.component.html
@@ -62,6 +62,10 @@
 
   <br>
   {{userId}}
+  {{userName}}
+  {{addressPin}}
+  {{addressCity}}
+  {{addressCountry}}
 </p>
 
 <button mat-flat-button color="warn" (click)="buyProduct()">Buy</button>
