--- a/frontend/src/app/components/shipping/shipping.component.html
+++ b/frontend/src/app/components/shipping/shipping.component.html
@@ -1,22 +1,51 @@
 
-
 <div fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="flex-start" >
 
   <mat-card>
-    <mat-card-header>
-      <mat-card-title>
-        flüm
-      </mat-card-title>
-      <mat-card-title>
-        {{productPrice}} CHF
-      </mat-card-title>
-      <mat-card-subtitle>
-        {{uploadDate | date: "dd.MM.yy, HH:mm"}}
-      </mat-card-subtitle>
+    <p>You are buying:</p>
+    <b> {{productName}}</b>
 
-    </mat-card-header>
+    <br>
+    <p>for </p>
+    {{productPrice}} CHF
+    <hr>
+    <b>Sellerinfo:</b>
+    <br><br>
+    <button mat-button class="button_fill" [routerLink]="['/User', userId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{userName}}</button>
+
+    {{userId}}<br>
+    {{userName}}<br>
+    {{addressPin}}<br>
+    {{addressCity}}<br>
+    {{addressCountry}}<br>
+
+
   </mat-card>
 
+
+  <mat-card>
+    <h2>Please enter your Shipping Adress:</h2>
+
+
+      <mat-form-field>
+        <input matInput placeholder="Street"  name="addressStreet">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Zip code"  name="addressPin">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="City"  name="addressCity">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Country"  name="addressCountry">
+      </mat-form-field>
+
+    <button mat-flat-button class="button_standard" (click)="buyProduct()">Buy</button>
+
+  </mat-card>
 
 
 
