added all files from last 2 commits manually

--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -2,7 +2,7 @@
 <p>Hi {{userName}}! Welcome to Stor</p>
 
 <button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
-<button mat-flat-button class="button_standard" [routerLink]="['/register/', userId]" routerLinkActive="active">Edit Profile</button>
+<button mat-flat-button class="button_standard" [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit Profile</button>
 
 <br>
 
