--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 30px; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 30px; font-family: Roboto, "Helvetica Neue", sans-serif; background-color:  #082A5D; color: #EEEEEE}
 
 .mat-card {
   margin: 20px 0;
@@ -20,5 +20,5 @@ button, input {
 }
 
 .button_standard{
-  background-color: #D3D9EF;
+  background-color: #46FFFD;
 }
