--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-search (searchInput)="searchProduct($event)">
 </app-search>
-
+<app-search-category></app-search-category>
 <div *ngFor="let product of searchList">
   {{product.productDescription}}
 </div>
@@ -20,7 +20,7 @@
       <mat-card-content>
         <img mat-card-image width="100%" height="100px" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
       </mat-card-content>
-<!--
+
       <mat-card-content>
         <p class="text">
           Price: <b>{{productItem.productPrice}} CHF</b>
@@ -37,12 +37,15 @@
       <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
 
       <mat-card-footer>
-        <span>{{productItem.productCategory}} </span>
-        <span>{{productItem.productLocation}} </span>
-        <span *ngIf="productItem.isService">Service </span>
-        <span *ngIf="productItem.isRentable">rentable </span>
-        <span *ngIf="productItem.isAvailable">available</span>
-      </mat-card-footer>-->
+        <mat-chip-list>
+          <mat-chip (click)="getAllCategory(productItem.productCategory)">{{productItem.productCategory}}</mat-chip>
+          <div *ngIf="productItem.productLocation === !''">
+          <mat-chip>{{productItem.productLocation}}</mat-chip></div>
+          <mat-chip *ngIf="productItem.isService">Service </mat-chip>
+          <mat-chip *ngIf="productItem.isRentable">rentable</mat-chip>
+          <mat-chip *ngIf="productItem.isAvailable">available</mat-chip>
+        </mat-chip-list>
+      </mat-card-footer>
     </mat-card>
   </div>
 </div>
