--- a/frontend/src/app/components/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/product-detail/product-detail.component.html
@@ -37,7 +37,7 @@
     {{addressPin}}<br>
     {{addressCity}}<br>
     {{addressCountry}}<br>
-    alalalaala {{userWallet}} lalala
+    {{userWallet}}
     <button mat-flat-button color="warn"  [routerLink]="['/shipping', productId]" routerLinkActive="active" [disabled]="checkCash()">Buy</button>
 
 
