--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -64,7 +64,7 @@
                 cdkTextareaAutosize
                 #autosize="cdkTextareaAutosize"
                 cdkAutosizeMinRows="1"
-                cdkAutosizeMaxRows="20"></textarea>
+                cdkAutosizeMaxRows="2"></textarea>
     </mat-form-field>
   </mat-card>
 
@@ -78,7 +78,7 @@
 
     <mat-form-field>
       <input matInput placeholder="Location" [(ngModel)]="productLocation" name="productLocation">
-      <div *ngIf="empty(productLocation)" class="invalid-feedback">Location</div>
+      <div *ngIf="empty(productLocation)" class="invalid-feedback">e.g. 3012</div>
     </mat-form-field>
 
     <mat-checkbox class="checkboxMargin" [(ngModel)]="productDelivery">Product delivery possible?</mat-checkbox>
