--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -18,7 +18,9 @@
 
 
       <mat-card-content>
-        <img mat-card-image width="100%" height="100px" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
+        <a [routerLink]="['/productDetail', productItem.productId]">
+          <img mat-card-image width="100%" height="100px" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
+        </a>
       </mat-card-content>
 
       <mat-card-content>
