--- a/frontend/src/app/components/product-detail/shipping/shipping.component.html
+++ b/frontend/src/app/components/product-detail/shipping/shipping.component.html
@@ -22,35 +22,74 @@
 
 
   <mat-card>
-    <h2>Please enter your Shipping Adress:</h2>
+    <h2>Please enter your Shipping Address:</h2>
+    <mat-tab-group>
+      <mat-tab label="Use my Address"> <p> </p>
+
+        <mat-form-field>
+          <input matInput placeholder="Country Code" [(ngModel)]="buyerAddressCountry" name="buyerAddressCountry">
+          <div *ngIf="!empty(buyerAddressCountry)" class="invalid-feedback">
+            <div *ngIf="!checkCountryCode(buyerAddressCountry)" class="invalid-feedback">e.g. CH</div>
+          </div>
 
 
-    <mat-form-field>
-      <input matInput placeholder="Country Code" [(ngModel)]="buyerAddressCountry" name="buyerAddressCountry">
-      <div *ngIf="!empty(buyerAddressCountry)" class="invalid-feedback">
-        <div *ngIf="!checkCountryCode(buyerAddressCountry)" class="invalid-feedback">e.g. CH</div>
-      </div>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput placeholder="Zip code" [(ngModel)]="buyerAddressPin" name="buyerAddressPin" >
+        </mat-form-field>
 
 
-    </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Street" [(ngModel)]="buyerAddressStreet" name="buyerAddressStreet">
+        </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="Zip code" [(ngModel)]="buyerAddressPin" name="buyerAddressPin" >
-    </mat-form-field>
-
-
-    <mat-form-field>
-      <input matInput placeholder="Street" [(ngModel)]="buyerAddressStreet" name="buyerAddressStreet">
-    </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="City" [(ngModel)]="buyerAddressCity" name="buyerAddressCity">
-    </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="City" [(ngModel)]="buyerAddressCity" name="buyerAddressCity">
+        </mat-form-field>
 
 
 
 
-    <button mat-flat-button class="button_standard" (click)="buyProduct()">Buy</button>
+        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash()" (click)="buyProduct()">Buy</button>
+
+
+
+      </mat-tab>
+      <mat-tab label="Use other Address">
+
+        <mat-form-field>
+
+          <input matInput placeholder="Country Code" [(ngModel)]="otherAddressCountry" name="otherAddressCountry">
+          <div *ngIf="!empty(otherAddressCountry)" class="invalid-feedback">
+            <div *ngIf="!checkCountryCode(otherAddressCountry)" class="invalid-feedback">e.g. CH</div>
+          </div>
+
+
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput placeholder="Zip code" [(ngModel)]="otherAddressPin" name="otherAddressPin" >
+        </mat-form-field>
+
+
+        <mat-form-field>
+          <input matInput placeholder="Street" [(ngModel)]="otherAddressStreet" name="otherAddressStreet">
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput placeholder="City" [(ngModel)]="otherAddressCity" name="otherAddressCity">
+        </mat-form-field>
+
+
+
+        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash()" (click)="buyProduct()">Buy</button>
+
+
+      </mat-tab>
+    </mat-tab-group>
+
+
 
   </mat-card>
 
