--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -1,7 +1,7 @@
 <br>
 
 <mat-horizontal-stepper [linear]="true" #stepper>
-  <mat-step label="Username">
+  <mat-step label="Account">
 
     <mat-card>
       <mat-card-title>
@@ -20,48 +20,6 @@
           <div *ngIf="!validateEmail(userMail)" class="invalid-feedback">Valid Email is required </div>
         </div>
       </mat-form-field>
-
-
-      <button mat-button matStepperNext>Next</button>
-    </mat-card>
-
-
-
-
-  </mat-step>
-  <mat-step label="Real Name">
-    <mat-card-title>
-      Create an account
-    </mat-card-title>
-
-    <br>
-    <br>
-
-    <mat-card>
-
-      <mat-form-field>
-        <input matInput placeholder="First Name*" [(ngModel)]="firstName" name="firstName">
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Last Name*" [(ngModel)]="lastName" name="lastName">
-      </mat-form-field>
-
-      <button mat-button matStepperNext>Next</button>
-    </mat-card>
-
-
-  </mat-step>
-
-  <mat-step label="Set password">
-
-    <mat-card>
-      <mat-card-title>
-        Set password
-      </mat-card-title>
-
-      <br>
-      <br>
 
       <mat-form-field *ngIf="!edit">
         <input matInput placeholder="Password*" [(ngModel)]="password" name="password" type="password">
@@ -96,6 +54,9 @@
   </mat-step>
 
 
+
+
+
   <mat-step label="Address">
 
     <mat-card>
@@ -106,6 +67,14 @@
       <br>
       <br>
 
+      <mat-form-field>
+        <input matInput placeholder="First Name*" [(ngModel)]="firstName" name="firstName">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Last Name*" [(ngModel)]="lastName" name="lastName">
+      </mat-form-field>
+      <br>
 
       <mat-form-field>
         <input matInput placeholder="Country Code" [(ngModel)]="addressCountry" name="addressCountry">
@@ -126,7 +95,6 @@
       <mat-form-field>
         <input matInput placeholder="City" [(ngModel)]="addressCity" name="addressCity">
       </mat-form-field>
-      <button mat-button matStepperNext>Skip</button>
       <button mat-button matStepperNext>Next</button>
     </mat-card>
 
