stepper only for registration not for edit

--- a/frontend/src/app/components/user-registration/user-registration.component.css
+++ b/frontend/src/app/components/user-registration/user-registration.component.css
@@ -5,3 +5,11 @@
 .valid-feedback{
   color: #3CAF19;
 }
+
+.mat-stepper-horizontal {
+  margin-top: 8px;
+}
+
+.mat-form-field {
+  margin-top: 16px;
+}
