--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -1,5 +1,9 @@
-<br>
 
+
+<div *ngIf="!edit">
+
+<br>
+<hr>
 <mat-horizontal-stepper [linear]="true" #stepper>
   <mat-step label="Account">
 
@@ -214,6 +218,163 @@
 
 <p>*Required Fields</p>
 
+</div>
 
 
 
+<div *ngIf="edit">
+
+<mat-card>
+
+  <mat-form-field>
+    <input matInput placeholder="User Name*" [(ngModel)]="userName" name="userName" (change)="evaluate(userName)">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Email*" [(ngModel)]="userMail" name="userMail">
+    <div *ngIf="!empty(userMail)">
+      <div *ngIf="!validateEmail(userMail)" class="invalid-feedback">Valid Email is required </div>
+    </div>
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="First Name*" [(ngModel)]="firstName" name="firstName">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Last Name*" [(ngModel)]="lastName" name="lastName">
+  </mat-form-field>
+  <br>
+
+
+  <mat-form-field *ngIf="!edit">
+    <input matInput placeholder="Password*" [(ngModel)]="password" name="password" type="password">
+    <ng-template [ngIf]="!empty(password)">
+      <div *ngIf="!passwordContainsMixedLetters(password)" class="invalid-feedback"> Use capital and small letters
+      </div>
+      <div *ngIf="!passwordHasNumber(password)" class="invalid-feedback"> Use at least one number
+      </div>
+      <div *ngIf="!passwordContainsSpecialChar(password)" class="invalid-feedback"> Use at least one special character
+      </div>
+      <div *ngIf="!passwordLength(password)" class="invalid-feedback"> Use at least 7 characters
+      </div>
+    </ng-template>
+
+  </mat-form-field>
+
+  <mat-form-field *ngIf="!edit">
+    <input matInput placeholder="Confirm Password*" [(ngModel)]="confPassword" name="confPassword" type="password">
+    <ng-template [ngIf]="!empty(confPassword)">
+      <div *ngIf="!confirmPassword(confPassword)" class="invalid-feedback"> Passwords do not Match
+      </div>
+    </ng-template>
+  </mat-form-field>
+
+
+
+</mat-card>
+
+
+<hr>
+
+<mat-card>
+  <mat-form-field appearance="fill">
+    <mat-label>Select Gender</mat-label>
+    <select matNativeControl [(ngModel)]="gender" value="gender">
+      <option value="Agender">Agender</option>
+      <option value="Androgyne">Androgyne</option>
+      <option value="Androgynous">Androgynous</option>
+      <option value="Bigender">Bigender</option>
+      <option value="Cis">Cis</option>
+      <option value="Cisgender">Cisgender</option>
+      <option value="CisFemale">Cis Female</option>
+      <option value="CisMale">Cis Male</option>
+      <option value="CisMan">Cis Man</option>
+      <option value="CisWoman">Cis Woman</option>
+      <option value="CisgenderFemale">Cisgender Female</option>
+      <option value="CisgenderMale">Cisgender Male</option>
+      <option value="CisgenderMan">Cisgender Man</option>
+      <option value="CisgenderWoman">Cisgender Woman</option>
+      <option value="Female">Female</option>
+      <option value="FemaletoMale">Female to Male</option>
+      <option value="FTM">FTM</option>
+      <option value="GenderFluid">Gender Fluid</option>
+      <option value="GenderNonconforming">Gender Nonconforming</option>
+      <option value="GenderQuestioning">Gender Questioning</option>
+      <option value="GenderVariant">Gender Variant</option>
+      <option value="Genderqueer">Genderqueer</option>
+      <option value="Male">Male</option>
+      <option value="MaletoFemale">Male to Female</option>
+      <option value="MTF">MTF</option>
+      <option value="Neither">Neither</option>
+      <option value="Neutrois">Neutrois</option>
+      <option value="Non-binary">Non-binary</option>
+      <option value="Other">Other</option>
+      <option value="Pangender">Pangender</option>
+      <option value="Trans">Trans</option>
+      <option value="Trans*">Trans*</option>
+      <option value="TransFemale">Trans Female</option>
+      <option value="Trans*Female">Trans* Female</option>
+      <option value="TransMale">Trans Male</option>
+      <option value="Trans*Male">Trans* Male</option>
+      <option value="TransMan">Trans Man</option>
+      <option value="Trans*Man">Trans* Man</option>
+      <option value="TransPerson">Trans Person</option>
+      <option value="Trans*Person">Trans* Person</option>
+      <option value="TransWoman">Trans Woman</option>
+      <option value="Trans*Woman">Trans* Woman</option>
+      <option value="Transfeminine">Transfeminine</option>
+      <option value="Transgender">Transgender</option>
+      <option value="TransgenderFemale">Transgender Female</option>
+      <option value="TransgenderMale">Transgender Male</option>
+      <option value="TransgenderMan">Transgender Man</option>
+      <option value="TransgenderPerson">Transgender Person</option>
+      <option value="TransgenderWoman">Transgender Woman</option>
+      <option value="Transmasculine">Transmasculine</option>
+      <option value="Transsexual">Transsexual</option>
+      <option value="TranssexualFemale">Transsexual Female</option>
+      <option value="TranssexualMale">Transsexual Male</option>
+      <option value="TranssexualMan">Transsexual Man</option>
+      <option value="TranssexualPerson">Transsexual Person</option>
+      <option value="TranssexualWoman">Transsexual Woman</option>
+      <option value="Two-Spirit">Two-Spirit</option>
+
+    </select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Telephone Number" [(ngModel)]="phoneNumber" name="phoneNumber">
+  </mat-form-field>
+</mat-card>
+
+<mat-card>
+  <mat-form-field>
+    <input matInput placeholder="Country Code" [(ngModel)]="addressCountry" name="addressCountry">
+    <div *ngIf="!empty(addressCountry)" class="invalid-feedback">
+      <div *ngIf="!checkCountryCode(addressCountry)" class="invalid-feedback">e.g. CH</div>
+    </div>
+
+
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Zip code" [(ngModel)]="addressPin" name="addressPin" (ngModelChange)="requestCity()">
+  </mat-form-field>
+
+
+  <mat-form-field>
+    <input matInput placeholder="Street" [(ngModel)]="addressStreet" name="addressStreet">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="City" [(ngModel)]="addressCity" name="addressCity">
+  </mat-form-field>
+
+
+</mat-card>
+
+<p>*Required Fields</p>
+
+
+
+  <button mat-flat-button class="button_standard" [routerLink]="['/user']" routerLinkActive="active" (click)="saveUser()">Save Changes</button>
+</div>
