--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -1,5 +1,6 @@
 <div>
   <mat-divider></mat-divider>
+  <button (click)="goBack()"><mat-icon>back</mat-icon>go back</button>
     <h2>My Product</h2>
 
   <mat-card>
