--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,19 +1,14 @@
-<app-search (searchInput)="searchProduct($event)">
-</app-search>
+<app-search-bar></app-search-bar>
 <app-search-category></app-search-category>
-<div *ngFor="let product of searchList">
-  {{product.productDescription}}
-</div>
 
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
   <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
-
     <mat-card>
 
       <mat-card-header>
         <!--<img mat-card-avatar src="" alt="Profile Picture">-->
         <mat-card-title>{{productItem.productName}}</mat-card-title>
-        <!--<mat-card-subtitle>{{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}} Uhr</mat-card-subtitle>-->
+        <mat-card-subtitle>{{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}} Uhr</mat-card-subtitle>
       </mat-card-header>
 
 
@@ -30,22 +25,7 @@
       <mat-card-actions *ngIf="isUserLoggedIn" align="end">
         <button mat-flat-button color="warn" (click)="buyProduct()">Buy</button>
       </mat-card-actions>
-      <hr>
 
-      <br>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
-
-      <mat-card-footer>
-        <mat-chip-list>
-          <mat-chip (click)="getAllCategory(productItem.productCategory)">{{productItem.productCategory}}</mat-chip>
-          <div *ngIf="productItem.productLocation === !''">
-          <mat-chip>{{productItem.productLocation}}</mat-chip></div>
-          <mat-chip *ngIf="productItem.isService">Service </mat-chip>
-          <mat-chip *ngIf="productItem.isRentable">rentable</mat-chip>
-          <mat-chip *ngIf="productItem.isAvailable">available</mat-chip>
-        </mat-chip-list>
-      </mat-card-footer>
     </mat-card>
   </div>
 </div>
