--- a/frontend/src/app/components/admin-panel/admin-panel.component.css
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.css
@@ -1,3 +1,11 @@
 mat-radio-button{
   margin-right: 5px;
 }
+
+
+.center-cropped {
+  object-fit: cover; /* Do not scale the image */
+  height: 150px;
+  width: auto;
+  opacity: 0.7;
+}
