--- a/frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -10,12 +10,26 @@
 </mat-card>
 
 <mat-card >
-  <mat-grid-list cols="4" [gutterSize]="'5px'" rowHeight="250px">
+  <mat-grid-list cols="4" [gutterSize]="'5px'" rowHeight="450px">
     <mat-grid-tile *ngFor="let productItem of productList" style="backgroundColor: white">
+
       <mat-grid-tile-header style="color: black">
-        Posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}
+        <h2>{{productItem.productName}}</h2>
+        <br>
       </mat-grid-tile-header>
-      {{productItem.productDescription}}
+
+      <br>
+      <mat-grid-tile-content>
+
+        <img mat-card-image class="center-cropped”" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
+
+        <br>
+        <br>
+        {{productItem.productDescription}}
+        <br><br>
+        Posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}
+        <br>
+      </mat-grid-tile-content>
       <mat-grid-tile-footer style="backgroundColor: white; color: black">
         <mat-radio-group> <!--add [(ngModel)]="productItem.isApproved"-->
           <mat-radio-button value="true" (click)="approveProduct([productItem.productId])" >Approve</mat-radio-button>
