--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
 
       <mat-card-content>
         <a [routerLink]="['/productDetail', productItem.productId]">
-          <img mat-card-image width="100%" height="100px" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
+          <img mat-card-image class="center-cropped”" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
         </a>
       </mat-card-content>
 
