--- a/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
+++ b/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
@@ -1,39 +1,31 @@
 <hr>
-<p>boughtproducts works!</p>
+<h2>History</h2>
 
 
 <div  fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
-  <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
+  <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let transaction of transactionList">
     <mat-card class="productItem_Card">
-      <mat-card-header>
-        <!--<img mat-card-avatar src="" alt="Profile Picture">-->
-        <mat-card-title>{{productItem.productName}}</mat-card-title>
-        <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <div *ngIf="productItem.isApproved">
-          <p class="text">Approved</p>
-        </div>
-        <div *ngIf="!productItem.isApproved">
-          <b class="text">Awaiting approval</b>
-        </div>
 
-        <div *ngIf="productItem.isAvailable">
-          <p class="text">Available</p>
-        </div>
-        <div *ngIf="!productItem.isAvailable">
-          <b class="text">Sold!</b>
-        </div>
-      </mat-card-content>
-      <mat-card-actions align="end">
-        <button mat-flat-button class="button_standard" [routerLink]="['/productForm/', productItem.productId]" routerLinkActive="active">Edit</button>
-        <button mat-flat-button class="button_standard" (click)="deleteProduct([productItem.productId])">Delete</button>
-      </mat-card-actions>
-      <hr>
 
-      <br>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
+      <p>
+        transactionId: {{transaction.transactionId}}<br>
+
+        productId: {{transaction.productId}}<br>
+
+        userId: {{transaction.userId}}<br>
+
+
+
+        buyerId: {{transaction.buyerId}}<br>
+        transactionStatus: {{transaction.transactionStatus}}<br>
+        deliveryFirstName: {{transaction.deliveryFirstName}}<br>
+        deliveryLastName: {{transaction.deliveryLastName}}<br>
+        deliveryStreet: {{transaction.deliveryStreet}}<br>
+        deliveryPin: {{transaction.deliveryPin}}<br>
+        deliveryCity: {{transaction.deliveryCity}}<br>
+        deliveryCountry: {{transaction.deliveryCountry}}<br>
+
+      </p>
 
     </mat-card>
   </div>
