--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,16 +1,34 @@
 ::ng-deep .mat-focused .mat-form-field-label {
   /*change color of label*/
-  color: #B82D70 !important;
+  color: black !important;
 }
 
 ::ng-deep.mat-form-field-underline {
   /*change color of underline*/
-  background-color: #D3D9EF !important;
+  background-color: #46FFFD !important;
 }
 
 ::ng-deep.mat-form-field-ripple {
   /*change color of underline when focused*/
-  background-color: #D3D9EF !important;;
+  background-color: #46FFFD !important;;
+}
+::ng-deep .mat-select .mat-select-arrow {
+  /* change color of arrow */
+  color: #46FFFD;
+}
+::ng-deep .mat-select .mat-focused {
+  /* change color of arrow */
+  color: #46FFFD;
+}
+
+::ng-deep .mat-checkbox .mat-checkbox-frame {
+  /* change color of check mark border */
+  border-color: #46FFFD;
+}
+
+::ng-deep .mat-checkbox .mat-checkbox-checked {
+  /*change color of check mark*/
+  color: #46FFFD;
 }
 
 .app {
