--- a/frontend/src/app/components/product-display/filter/filter.component.css
+++ b/frontend/src/app/components/product-display/filter/filter.component.css
@@ -1,69 +1,140 @@
-.filterOptions{
-  display:flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly ;
-  flex-direction:row;
-  color: white;
-}
-.filterButton{
-  border: 1px solid #46FFFD;
-  justify-content: end;
-}
-.productCategory{
-  color: black;
-}
-mat-form-field{
-  width: 20%;
+.categoryTitle{
+  margin: 15px;
 }
 
-.hideFilter{
-  display: flex;
-  justify-content: end;
+.container{
+  margin: 15px
 }
-.hideIcon{
-  justify-content: end;
-  display: flow;
-  border-color: #082A5D;
-
-}
-.priceFilter{
+.filterOptions {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  justify-content: center;
+  flex-direction: row;
+  color: #F0F0F0;
 }
 
-.selectFilter{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  width: 100px;
+@media (max-width: 705px) {
+  .filterBig {
+    display: none; /* hides filter if display < 500px */
+  }
 }
+
 input:focus {
-  /* removing the input focus blue box. Put this on the form if you like. */
+  /* change color of the input focus */
   outline: #46FFFD;
 }
-/*
-input[type=text]{
-  flex-grow:2;
-  border:1px solid #46FFFD;
-  border-radius: 4px;
-  padding-left: 1%;
-  padding-right: 1%;
-}*/
 
-/*input[type=number]{
-  border:1px solid #46FFFD;
-  border-radius: 4px;
-  box-sizing: border-box;
-}*/
-input[type=number]:focus {
-  border: 3px solid #46FFFD;
+@media (min-width: 705px){
+  .filterSmall {
+    display: none; /* hides filter if display > 500px */
+  }
 }
 
-::ng-deep .mat-checkbox .mat-checkbox-frame {
+mat-expansion-panel{
+  background-color: #082A5D;
+  border: 1px solid #46FFFD;
+  padding: 0px;
+}
+
+mat-expansion-panel-header{
+  color: #F0F0F0;
+}
+
+mat-divider{
+  border-color: #46FFFD;
+  padding-bottom: 10px;
+}
+
+mat-checkbox{
+  color: #F0F0F0;
+  font-size: 15px;
+}
+mat-radio-button{
+  color: #F0F0F0;
+  font-size: 15px;
+}
+
+::ng-deep .mat-radio-outer-circle .mat-radio-checked{
   border-color: #46FFFD;
 }
 
-::ng-deep .mat-checkbox .mat-checkbox-checked{
+::ng-deep .mat-radio-inner-circle {
+  background-color: #46FFFD;
+}
+
+::ng-deep .mat-radio-ripple .mat-ripple-element {
+  background-color: transparent;
+}
+
+::ng-deep .mat-focused .mat-form-field-label {
+  /*change color of label*/
+  color: #F0F0F0;
+}
+::ng-deep .mat-form-field-label {
+  /*change color of label*/
+  color: #F0F0F0;
+}
+
+::ng-deep .mat-expansion-indicator:after {
+  color: #F0F0F0; /* background-color of extension-panel */
+}
+
+::ng-deep .mat-focused .mat-form-field-label {
+  /* change color of label after input*/
   color: #46FFFD;
 }
+
+::ng-deep .mat-form-field-label {
+    /* change color of label */
+    color: #F0F0F0;
+}
+
+.buttonContainer {
+  padding: 0px;
+  display: flex;
+  flex-direction: row;
+}
+
+.filterButton{
+  border: 1px solid #46FFFD;
+  margin: 5px;
+  color: #F0F0F0;
+}
+
+.moreFilter{
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.filterCheck{
+  padding-right: 5%;
+}
+
+.clearIcon{
+  justify-content: end;
+  display: flow;
+  border-color: #082A5D;
+}
+
+
+/* other layout option for price input style */
+/*
+.pricePanel{
+  width: 170px;
+  background-color: transparent;
+  border: transparent;
+}
+
+.priceButton{
+  background-color: #46FFFD;
+  border-radius: 4px;
+  border: #082A5D;
+}
+
+.priceContainer{
+  background-color: #F0F0F0;
+  color: #F0F0F0;
+}
+*/
