--- a/frontend/src/app/components/product-display/filter/filter.component.html
+++ b/frontend/src/app/components/product-display/filter/filter.component.html
@@ -1,47 +1,105 @@
-<!--<div class="hideFilter" *ngIf="!clickFilter">
-<button mat-button class="filterButton" (click)="clickFilter = !clickFilter" >Filter<mat-icon>add</mat-icon></button>
-</div>-->
-
-<!--<div *ngIf="clickFilter">
-  <button mat-icon-button (click)="clickFilter = !clickFilter" class="hideIcon" color="#082A5D"><mat-icon>add</mat-icon></button>-->
+<div class="categoryTitle" *ngIf="category !== ''">
+  {{category}}
+  <button mat-button matSuffix mat-icon-button (click)="clear()"><mat-icon>close</mat-icon></button>
+</div>
+<div class="container">
+<div class="filterBig">
   <div class="filterOptions">
-    <mat-form-field class="productCategory" appearance="fill">
+    <mat-form-field>
      <mat-label>Select Product Category</mat-label>
-     <mat-select class="selectOption" [(ngModel)]="category" (selectionChange)="navigateTo()" value="category">
+     <mat-select [(ngModel)]="category" (selectionChange)="navigateTo()" value="category">
+       <mat-option [value]="">None</mat-option>
        <mat-option *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}</mat-option>
      </mat-select>
    </mat-form-field>
     <mat-form-field>
-        <input type="text" matInput [(ngModel)]="location" (ngModelChange)="navigateTo()" placeholder="Location" name="location">
-        <button mat-button *ngIf="location !== ''" matSuffix mat-icon-button (click)="clear()">
+        <input type="text" matInput [(ngModel)]="location" (change)="navigateTo()" placeholder="Location" name="location">
+        <button class="hideIcon" mat-button *ngIf="location !== ''" matSuffix mat-icon-button (click)="clear()">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
-     <mat-expansion-panel class="priceFilter">
-       <mat-expansion-panel-header role="button">Price</mat-expansion-panel-header>
-       <mat-form-field>
-       <input matInput type="number" [(ngModel)]="priceMin" placeholder="min Price">
-       </mat-form-field>
-       <mat-form-field>
-       <input matInput [(ngModel)]="priceMax" placeholder="max Price">
-       </mat-form-field>
-       <button mat-button (click)="navigateTo()">save</button>
-       <button mat-button (click)="navigateTo()">delete</button>
-       <mat-slider min="priceMax" max="priceMax" step="10" value="priceMin, priceMax"></mat-slider>
-     </mat-expansion-panel>
-    <mat-list>
-      <mat-list-item>
-         <mat-checkbox [(ngModel)]="available" (change)="navigateTo()" [checked]="available">Available Products</mat-checkbox>
-        </mat-list-item>
-      <mat-list-item>
-       <mat-checkbox [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery">Delivery Possible</mat-checkbox>
-      </mat-list-item>
-    </mat-list>
-    <button class="filterButton" mat-button [routerLink]="['/search']">remove Filter</button>
-    <!-- <mat-expansion-panel>
-       <mat-autocomplete #auto="matAutocomplete">
-         <mat-option *ngFor="let canton of cantons" [value]="location" [(ngModel)]="location">{{canton}}</mat-option>
-       </mat-autocomplete>
-       </mat-expansion-panel>-->
-    </div>
+    <mat-form-field>
+      <input matInput class="priceInput" [(ngModel)]="priceMin" (keyup)="navigateTo()" placeholder="min Price">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput class="priceInput" [(ngModel)]="priceMax" (keyup)="navigateTo()" placeholder="max Price">
+    </mat-form-field>
 
+    <!-- other layout options for price input -->
+  <!--<mat-expansion-panel class="pricePanel">
+    <mat-expansion-panel-header role="button">Price</mat-expansion-panel-header>
+    <mat-form-field>
+    <input matInput [(ngModel)]="priceMin" placeholder="min Price">
+    </mat-form-field>
+    <mat-form-field>
+    <input matInput [(ngModel)]="priceMax" placeholder="max Price">
+    </mat-form-field>
+    <button class="priceButton" (click)="navigateTo()">save</button>
+    <button class="priceButton" (click)="navigateTo()">delete</button>
+    <!--<mat-slider min="priceMax" max="priceMax" step="10" value="priceMin, priceMax"></mat-slider>
+  </mat-expansion-panel>
+    <mat-form-field>
+      <mat-select class=productPrice placeholder="Price">
+        <input class="priceInput" [(ngModel)]="priceMin" (keyup)="navigateTo()" placeholder="min Price">
+        <input class="priceInput" [(ngModel)]="priceMax" (keyup)="navigateTo()" placeholder="max Price">
+        <mat-option class="priceContainer">
+        <button class="priceButton" (click)="navigateTo()">save</button>
+          <button class="priceButton" mat-button (click)="navigateTo()">delete</button>
+        </mat-option>
+      </mat-select>
+    </mat-form-field>-->
+
+    <div class="buttonContainer">
+      <button class="filterButton" mat-button (click)="clear()">clear filter<!--<mat-icon>clear</mat-icon>--></button>
+      <button class="filterButton" mat-button (click)="clickFilter = !clickFilter">more filter<!--<mat-icon>add</mat-icon>--></button>
+    </div>
+  </div>
+  <div class="moreFilter" *ngIf="clickFilter">
+    <mat-radio-group [(ngModel)]="delivery">
+      <p>Delivery:</p>
+      <mat-radio-button value="" (change)="navigateTo()">doesn't matter</mat-radio-button>
+      <mat-radio-button value="true" (change)="navigateTo()">possible</mat-radio-button>
+      <mat-radio-button value="false" (change)="navigateTo()">not possible</mat-radio-button>
+    </mat-radio-group>
+    <!-- not optimal solution
+    <mat-checkbox class="filterCheck" [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery" color="#46FFFD">possible</mat-checkbox>
+   -->
+  </div>
+</div>
+
+
+<div class="filterSmall">
+<mat-expansion-panel>
+  <mat-expansion-panel-header>Filter</mat-expansion-panel-header>
+  <mat-divider></mat-divider>
+  <mat-form-field>
+    <mat-label>Select Product Category</mat-label>
+    <mat-select [(ngModel)]="category" (selectionChange)="navigateTo()" value="category">
+      <mat-option [value]="">None</mat-option>
+      <mat-option *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <input type="text" matInput [(ngModel)]="location" (ngModelChange)="navigateTo()" placeholder="Location" name="location">
+    <button class="clearIcon" mat-button *ngIf="location !== ''" matSuffix mat-icon-button (click)="clear()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+  <mat-form-field>
+      <input matInput [(ngModel)]="priceMin" (keyup)="navigateTo()" placeholder="min Price">
+  </mat-form-field>
+  <mat-form-field>
+      <input matInput [(ngModel)]="priceMax" (keyup)="navigateTo()" placeholder="max Price">
+  </mat-form-field>
+  <mat-list>
+    <mat-list-item>
+      <mat-checkbox [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery" color="#46FFFD">Delivery Possible</mat-checkbox>
+    </mat-list-item>
+  </mat-list>
+
+  <div align="right">
+  <button class="filterButton" mat-button [routerLink]="['/search']">clear filter<!--<mat-icon>clear</mat-icon>--></button>
+  </div>
+</mat-expansion-panel>
+</div>
+</div>
