--- a/frontend/src/app/components/product-display/product-display.component.html
+++ b/frontend/src/app/components/product-display/product-display.component.html
@@ -2,6 +2,7 @@
   {{name}}
 </app-search-bar>
 <!--<app-filter (searchInput)="searchProduct($event)"></app-filter>-->
+
 <app-filter></app-filter>
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
   <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
@@ -31,17 +32,16 @@
       <hr>
 
       <br>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
+      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
+      <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" ><mat-icon>place</mat-icon>{{productItem.productLocation}}</button>
 
       <mat-card-footer>
         <mat-chip-list>
-          <mat-chip (click)="getAllCategory(productItem.productCategory)">{{productItem.productCategory}}</mat-chip>
+          <mat-chip>{{productItem.productCategory}}</mat-chip>
           <div *ngIf="productItem.productLocation === !''">
             <mat-chip>{{productItem.productLocation}}</mat-chip></div>
           <mat-chip *ngIf="productItem.isService">Service </mat-chip>
           <mat-chip *ngIf="productItem.isRentable">rentable</mat-chip>
-          <mat-chip *ngIf="productItem.isAvailable">available</mat-chip>
         </mat-chip-list>
       </mat-card-footer>
     </mat-card>
