--- a/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.html
+++ b/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.html
@@ -33,7 +33,7 @@
         </div>
         <div>
           Buyer: <br>
-          <button mat-button class="button_fill" [routerLink]="['/user', transaction.buyerId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{transaction.buyerIdggggg}}</button>
+          <button mat-button class="button_fill" [routerLink]="['/user', transaction.buyerId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{transaction.buyerId}}</button>
 
           <br>
           {{transaction.deliveryFirstName}} {{transaction.deliveryLastName}}<br>
